# test_task

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
store/: Dockerfile
store/api/: services.py  urls.py  views.py
store/api/migrations/: 0001_initial.py  0002_delete_item.py
store/core/: settings.py  urls.py
store/frontend/: payment.html  payment.js
store/payments/: models.py
store/payments/migrations/: 0001_initial.py  0002_order_orderitem.py  0003_discount_tax.py  0004_order_discount_order_tax.py
store/static/js/: payment.js
store/store/: settings.py
store/templates/: cancel.html  payment.html  success.html
