[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Taya",email = "kramso02@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.17.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
